--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,6 +8,7 @@
 
 <body>
     <div class="main-content">{{>header}}
+        <p>This site was created by Bart. It uses meta from mapbox.com and cos tam sky.</p>
         <img class='portrait' src="/img/robot.png" alt="" /> </div>
     {{>footer}}
 </body>
